<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SecondPartDetailsFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/calButton"
        android:layout_margin="10dp">

        <!-- Table Heading -->

        <TableRow
            android:background="@color/colorMain">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col4"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />


        </TableRow>

        <!-- Table Data -->

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1dilim"
                android:textSize="12sp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1ratio"
                android:padding="10dp"
                android:id="@+id/row1ratio"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rowPrice"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row2dilim"
                android:textSize="12sp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row2ratio"
                android:id="@+id/row2ratio"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rowPrice"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row3dilim"
                android:textSize="12sp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row3ratio"
                android:id="@+id/row3ratio"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rowPrice"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row4dilim"
                android:textSize="12sp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row4ratio"
                android:id="@+id/row4ratio"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rowPrice"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row5dilim"
                android:textSize="12sp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row5ratio"
                android:id="@+id/row5ratio"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rowPrice"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row6dilim"
                android:textSize="12sp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row6ratio"
                android:id="@+id/row6ratio"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rowPrice"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row7dilim"
                android:textSize="12sp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row7ratio"
                android:id="@+id/row7ratio"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rowPrice"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row8dilim"
                android:textSize="12sp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row8ratio"
                android:id="@+id/row8ratio"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rowPrice"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row9toplam"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />




            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rowPrice"
                android:padding="10sp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>


    </TableLayout>




<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="calculate"
    android:id="@+id/calButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_margin="20dp"
    app:layout_constraintTop_toTopOf="parent">
</Button>

</androidx.constraintlayout.widget.ConstraintLayout>