<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SecondPartIhtiyariDetailsFragment">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Table Heading -->

            <TableRow android:background="@color/colorMain">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:text="@string/col1"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:text="@string/col2"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/col4"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />


            </TableRow>

            <!-- Table Data -->

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/row1dilim"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/row1ratio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/row1ratio"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv50"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:text="@string/rowPrice"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/row2dilim"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/row2ratio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row2ratio"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/tv80"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/rowPrice"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/row3dilim"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/row3ratio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row3ratio"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv130"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/rowPrice"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/row4dilim"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/row4ratio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row4ratio"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv260"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/rowPrice"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/row5dilim"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/row5ratio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row5ratio"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv780"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/rowPrice"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/row6dilim"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/row6ratio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row6ratio"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv1040"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/rowPrice"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/row7dilim"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/row7ratio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row7ratio"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv2080"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/rowPrice"
                    android:textSize="12sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/row8dilim"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/row8ratio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/row8ratio"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv4160"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/rowPrice"
                    android:textSize="12sp" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExplanation">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/row9toplam"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvtotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/rowPrice"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>